--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -29,9 +29,10 @@
         android:id="@+id/spinner_menu"
         android:layout_width="435dp"
         android:layout_height="81dp"
-        android:layout_marginTop="49dp"
-        android:layout_marginBottom="250dp"
+        android:layout_marginTop="174dp"
         android:background="@drawable/buttons"
+        android:gravity="center"
+        android:textAlignment="center"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,14 +44,12 @@
         android:layout_width="264dp"
         android:layout_height="178dp"
         android:layout_marginStart="73dp"
-        android:layout_marginTop="67dp"
+        android:layout_marginTop="193dp"
         android:layout_marginEnd="74dp"
-        android:layout_marginBottom="50dp"
-        android:text="Welcome to OMAN FOOD! Click the button below to select an action."
+        android:text="🌟 Welcome to FMS! 🌟 Discover the world of OMAN FOOD and tantalize your taste buds with our exquisite selection of dishes from Oman. Let your culinary journey begin! Click the button below to explore and indulge."
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/spinner_menu"
+        android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
