--- a/app/src/main/res/layout/activity_pending_breakfast_orders.xml
+++ b/app/src/main/res/layout/activity_pending_breakfast_orders.xml
@@ -9,70 +9,53 @@
         android:id="@+id/breakfastFruitTextView"
         android:layout_width="353dp"
         android:layout_height="41dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="26dp"
+        android:layout_marginTop="31dp"
         android:text="Fruit: "
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.583"
-        app:layout_constraintStart_toStartOf="@+id/textViewOrder"
         app:layout_constraintTop_toBottomOf="@+id/textViewOrder" />
 
     <TextView
         android:id="@+id/breakfastCerealTextView"
         android:layout_width="354dp"
         android:layout_height="40dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="19dp"
+        android:layout_marginEnd="1dp"
         android:text="Cereal: "
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/breakfastFruitTextView" />
 
     <TextView
         android:id="@+id/breakfastStarchTextView"
         android:layout_width="355dp"
         android:layout_height="41dp"
-        android:layout_marginStart="37dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="19dp"
         android:text="Starch: "
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/breakfastCerealTextView" />
 
     <TextView
         android:id="@+id/breakfastMeatTextView"
         android:layout_width="354dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="19dp"
+        android:layout_height="40dp"
         android:text="Meat: "
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/breakfastStarchTextView" />
 
     <TextView
         android:id="@+id/breakfastSpreadsTextView"
-        android:layout_width="357dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="354dp"
+        android:layout_height="41dp"
+        android:layout_marginEnd="1dp"
         android:text="Spreads: "
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/breakfastMeatTextView" />
 
     <TextView
@@ -81,10 +64,10 @@
         android:layout_height="77dp"
         android:background="@drawable/buttons"
         android:paddingTop="20dp"
-        android:text="ORDER MADE"
+        android:text="PENDING BREAKFAST ORDER"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="29dp"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -93,49 +76,34 @@
 
     <Button
         android:id="@+id/nextButton"
-        android:layout_width="91dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="604dp"
+        android:layout_width="126dp"
+        android:layout_height="40dp"
         android:background="@drawable/buttons"
         android:text="Next"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvOrder"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/previousButton"
-        android:layout_width="105dp"
+        android:layout_width="144dp"
         android:layout_height="40dp"
-        android:layout_marginTop="13dp"
         android:background="@drawable/buttons"
         android:text="Previous"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/breakfastSpreadsTextView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/deleteButton"
         android:layout_width="150dp"
         android:layout_height="41dp"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="36dp"
         android:background="@drawable/buttons"
         android:text="Mark as served"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/nextButton"
-        app:layout_constraintStart_toEndOf="@+id/previousButton"
-        app:layout_constraintTop_toBottomOf="@+id/breakfastSpreadsTextView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toEndOf="@+id/previousButton" />
 
     <TextView
         android:id="@+id/textViewOrder"
@@ -151,5 +119,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvOrder" />
+
+    <TextView
+        android:id="@+id/orderedBy"
+        android:layout_width="213dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="137dp"
+        android:layout_marginEnd="54dp"
+        android:text="Made by: "
+        android:textSize="14dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/breakfastSpreadsTextView" />
+
+    <TextView
+        android:id="@+id/orderedTime"
+        android:layout_width="212dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="145dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="54dp"
+        android:text="Time-Ordered: "
+        android:textSize="14dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/orderedBy" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
