--- a/app/src/main/res/layout/activity_selectmeal.xml
+++ b/app/src/main/res/layout/activity_selectmeal.xml
@@ -27,47 +27,33 @@
 
     <Button
         android:id="@+id/btnBreakfast"
-        android:layout_width="127dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="270dp"
-        android:layout_marginTop="31dp"
-        android:layout_marginBottom="532dp"
+        android:layout_width="136dp"
+        android:layout_height="51dp"
         android:background="@drawable/buttons"
         android:text="BREAKFAST"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvSelectMeal" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnLunch"
-        android:layout_width="125dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginBottom="397dp"
+        android:layout_width="157dp"
+        android:layout_height="51dp"
         android:background="@drawable/buttons"
         android:text="LUNCH"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/btnBreakfast"
-        app:layout_constraintStart_toStartOf="@+id/btnBreakfast"
-        app:layout_constraintTop_toBottomOf="@+id/btnBreakfast"
-        app:layout_constraintVertical_bias="0.181" />
+        app:layout_constraintEnd_toStartOf="@+id/btnDinner"
+        app:layout_constraintStart_toEndOf="@+id/btnBreakfast" />
 
     <Button
         android:id="@+id/btnDinner"
-        android:layout_width="128dp"
-        android:layout_height="58dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginBottom="264dp"
+        android:layout_width="147dp"
+        android:layout_height="51dp"
         android:background="@drawable/buttons"
         android:text="DINNER"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/btnLunch"
-        app:layout_constraintStart_toStartOf="@+id/btnLunch"
-        app:layout_constraintTop_toBottomOf="@+id/btnLunch"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
