--- a/app/src/main/res/layout/activity_wait.xml
+++ b/app/src/main/res/layout/activity_wait.xml
@@ -8,15 +8,16 @@
 
     <TextView
         android:id="@+id/tvWait"
-        android:layout_width="392dp"
-        android:layout_height="341dp"
-        android:layout_marginStart="9dp"
-        android:layout_marginTop="75dp"
-        android:layout_marginEnd="10dp"
+        android:layout_width="311dp"
+        android:layout_height="349dp"
+        android:layout_marginStart="53dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="48dp"
         android:text="We have received your order, kindly wait for the meal in a few. Thank you!"
         android:textAlignment="center"
-        android:textSize="29dp"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
