--- a/app/src/main/res/layout/activity_selectmeal.xml
+++ b/app/src/main/res/layout/activity_selectmeal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/myfood">
+    android:background="@drawable/meal">
 
     <TextView
         android:id="@+id/tvSelectMeal"
