--- a/app/src/main/res/layout/activity_pending_orders.xml
+++ b/app/src/main/res/layout/activity_pending_orders.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/myfood">
+    android:background="@drawable/done">
 
     <TextView
         android:id="@+id/tvOrders"
@@ -15,7 +15,7 @@
         android:text="PENDING ORDERS"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="24dp"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.518"
         app:layout_constraintStart_toStartOf="parent"
