--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -1,65 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:background="@drawable/myfood">
 
+    <!-- App bar with tabs -->
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <!-- Toolbar -->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:title="Admin"
+            app:titleTextColor="@android:color/white"
+            app:titleMarginStart="16dp"
+            app:titleMarginEnd="16dp"/>
+
+        <!-- TabLayout -->
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:tabIndicatorColor="@android:color/white"
+            app:tabIndicatorHeight="4dp"
+            app:tabTextColor="@android:color/white"
+            app:tabSelectedTextColor="@android:color/white"
+            app:tabMode="scrollable"
+            app:tabGravity="fill"/>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <!-- View pager for tab content -->
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
+        app:layout_constraintBottom_toTopOf="@id/tvActions"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Your existing views -->
     <TextView
         android:id="@+id/tvActions"
-        android:layout_width="417dp"
+        android:layout_width="0dp"
         android:layout_height="105dp"
         android:background="@drawable/buttons"
-        android:paddingLeft="5dp"
-        android:paddingTop="20dp"
-        android:paddingRight="5dp"
+        android:paddingTop="40dp"
         android:text="AVAILABLE ACTIONS"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintTop_toBottomOf="@id/view_pager"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
         android:id="@+id/textViewRegisterLink"
-        android:layout_width="127dp"
+        android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_below="@id/tvActions"
         android:background="@drawable/buttons"
         android:text="NEW TABLE"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tvActions"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnPendingOrders"
+        app:layout_constraintHorizontal_bias="0.5"/>
 
     <Button
         android:id="@+id/btnPendingOrders"
-        android:layout_width="174dp"
+        android:layout_width="0dp"
         android:layout_height="41dp"
-        android:layout_below="@id/textViewRegisterLink"
-        android:layout_marginStart="1dp"
         android:background="@drawable/buttons"
         android:text="PENDING ORDERS"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvActions"
+        app:layout_constraintStart_toEndOf="@+id/textViewRegisterLink"
         app:layout_constraintEnd_toStartOf="@+id/btnServedOrders"
-        app:layout_constraintHorizontal_bias="0.466"
-        app:layout_constraintStart_toEndOf="@+id/textViewRegisterLink" />
+        app:layout_constraintHorizontal_bias="0.5"/>
 
     <Button
         android:id="@+id/btnServedOrders"
-        android:layout_width="159dp"
+        android:layout_width="0dp"
         android:layout_height="41dp"
-        android:layout_below="@id/textViewRegisterLink"
         android:background="@drawable/buttons"
         android:text="SERVED ORDERS"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tvActions"
+        app:layout_constraintStart_toEndOf="@+id/btnPendingOrders"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
