--- a/app/src/main/res/layout/activity_breakfast.xml
+++ b/app/src/main/res/layout/activity_breakfast.xml
@@ -20,60 +20,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvbfFruit"
-        android:layout_width="137dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="28dp"
-        android:text="FRUIT STATION:"
-        android:textColor="@color/white"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/breakfast_recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvBreakfast"
+        app:layout_constraintBottom_toTopOf="@+id/btbfOk"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvBreakfast" />
-
-    <TextView
-        android:id="@+id/tvbfCereal"
-        android:layout_width="137dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="17dp"
-        android:text="CEREALS STATION:"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvbfFruit" />
-
-    <TextView
-        android:id="@+id/tvbfStarch"
-        android:layout_width="136dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="14dp"
-        android:text="STARCH STATION:"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvbfCereal" />
-
-    <TextView
-        android:id="@+id/tvbfMeat"
-        android:layout_width="136dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="12dp"
-        android:text="MEAT STATION:"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvbfStarch" />
-
-    <TextView
-        android:id="@+id/tvbfSpreads"
-        android:layout_width="136dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="9dp"
-        android:text="SPREADS:"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvbfMeat" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btbfOk"
@@ -87,79 +41,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <AutoCompleteTextView
-        android:id="@+id/etbfFruit"
-        android:layout_width="234dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:focusable="false"
-        android:hint="Choose a fruit"
-        android:inputType="text"
-        android:background="@drawable/tvbackg"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tvbfFruit"
-        app:layout_constraintTop_toBottomOf="@+id/tvBreakfast" />
-
-    <AutoCompleteTextView
-        android:id="@+id/etbfCereal"
-        android:layout_width="233dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="3dp"
-        android:ems="10"
-        android:focusable="false"
-        android:hint="Choose a cereal"
-        android:inputType="text"
-        android:background="@drawable/tvbackg"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tvbfCereal"
-        app:layout_constraintTop_toBottomOf="@+id/etbfFruit" />
-
-    <AutoCompleteTextView
-        android:id="@+id/etbfStarch"
-        android:layout_width="236dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="4dp"
-        android:ems="10"
-        android:focusable="false"
-        android:hint="Choose a starch"
-        android:inputType="text"
-        android:background="@drawable/tvbackg"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tvbfStarch"
-        app:layout_constraintTop_toBottomOf="@+id/etbfCereal" />
-
-    <AutoCompleteTextView
-        android:id="@+id/etbfMeat"
-        android:layout_width="235dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="5dp"
-        android:ems="10"
-        android:focusable="false"
-        android:hint="Click to choose"
-        android:inputType="text"
-        android:background="@drawable/tvbackg"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tvbfMeat"
-        app:layout_constraintTop_toBottomOf="@+id/etbfStarch" />
-
-    <AutoCompleteTextView
-        android:id="@+id/etbfSpreads"
-        android:layout_width="234dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="26dp"
-        android:ems="10"
-        android:focusable="false"
-        android:hint="Choose a spread"
-        android:inputType="text"
-        android:background="@drawable/tvbackg"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tvbfSpreads"
-        app:layout_constraintTop_toBottomOf="@+id/etbfMeat" />
 </androidx.constraintlayout.widget.ConstraintLayout>
