--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -15,7 +15,7 @@
         android:paddingLeft="5dp"
         android:paddingTop="20dp"
         android:paddingRight="5dp"
-        android:text="AVAILABLE ACTIONS"
+        android:text="ADMIN ACCOUNT"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20dp"
