--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -13,7 +13,7 @@
         android:paddingLeft="5dp"
         android:paddingTop="20dp"
         android:paddingRight="5dp"
-        android:text="WELCOME TO FMS"
+        android:text="DIGITAL MENU"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20dp"
@@ -46,7 +46,7 @@
         android:layout_marginStart="73dp"
         android:layout_marginTop="193dp"
         android:layout_marginEnd="74dp"
-        android:text="🌟 Welcome to FMS! 🌟 Discover the world of OMAN FOOD and tantalize your taste buds with our exquisite selection of dishes from Oman. Let your culinary journey begin! Click the button below to explore and indulge."
+        android:text="🌟 Welcome to OMAN HOTEL! 🌟 Discover the world of OMAN FOOD and tantalize your taste buds with our exquisite selection of dishes from Oman. Let your culinary journey begin! Click the button below to explore and indulge."
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="14dp"
